--- a/app/src/main/res/layout/fragment_config_form.xml
+++ b/app/src/main/res/layout/fragment_config_form.xml
@@ -697,10 +697,10 @@
             app:backgroundTint="@color/btn_back_gre105"
             app:layout_constraintTop_toBottomOf="@+id/tilConfigFormObservaciones"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/btnConfigFormOk"/>
+            app:layout_constraintEnd_toStartOf="@id/btnConfigFormContinue"/>
 
         <Button
-            android:id="@+id/btnConfigFormOk"
+            android:id="@+id/btnConfigFormContinue"
             android:layout_width="@dimen/widthButton_x1"
             android:layout_height="@dimen/heightButton_x2"
             android:layout_marginTop="@dimen/margin_x4"
@@ -728,7 +728,7 @@
             app:strokeColor="@color/strokes_gre107"
             app:backgroundTint="@color/btn_back_gre105"
             app:layout_constraintTop_toBottomOf="@+id/tilConfigFormObservaciones"
-            app:layout_constraintStart_toEndOf="@id/btnConfigFormOk"
+            app:layout_constraintStart_toEndOf="@id/btnConfigFormContinue"
             app:layout_constraintEnd_toEndOf="parent"/>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
