Nuevo repository y nuevos check, y mucho mas...

--- a/app/src/main/res/layout/select_molde.xml
+++ b/app/src/main/res/layout/select_molde.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/layoutListMoldeConfig"
+    android:id="@+id/layoutSelectMolde"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/padding_x1"
@@ -16,7 +16,7 @@
         style="@style/headers"/>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rcvListMoldeConfig"
+        android:id="@+id/rcvSelectMolde"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="@dimen/margin_x2"
@@ -29,7 +29,7 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fabListMoldeConfigBack"
+        android:id="@+id/fabSelectMoldeBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin_x3"
@@ -41,7 +41,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fabListMoldeConfigHome"
+        android:id="@+id/fabSelectMoldeHome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin_x3"
